# csca-5028-final-project

./: .dockerignore  .flake8  .gitignore  GCP.md  README.md  Report.docx  pyproject.toml  requirements.txt
.github/workflows/: build-data-collector.yml  build-publish-data-collector.yml  build-publish.yml  db-migration.yml  deploy-data-collector.yml  deploy.yml  docker-image.yml  integration-tests.yml  main.yml  unit-tests.yml  web-ui.yml
.local/: .env.example  docker-compose.yml
applications/collector/: README.md  job.py  requirements.txt
applications/data-analyzer/: Dockerfile  README.md  requirements.txt
applications/data-collector/: Dockerfile  README.md  requirements.txt
applications/rest-api/: Dockerfile  README.md  requirements.txt
components/: README.md  pyproject.toml  requirements.txt
components/rmatzke/components/collector/: collector_run_gateway.py
components/rmatzke/components/common/: mapper_funcs.py  templates.py
components/rmatzke/components/genre/: genre_gateway.py
components/rmatzke/components/other/: other_gateway.py
components/rmatzke/components/youtube/: youtube_channel_gateway.py  youtube_video_gateway.py  youtube_video_genre_gateway.py  youtube_video_service.py
components/tests/: test_other_gateway.py  test_video_gateway.py
components/tests/collector/: test_collector_run_gateway.py
components/tests/genre/: test_genre_gateway.py
components/tests/youtube/: test_youtube_channel_gateway.py
components/videos/: README.md  pyproject.toml
components/videos/rmatzke/videos/: video_gateway.py
components/videos/tests/: test_video_gateway.py
(+27 files in other folders)
